src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__log10.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"log10f64\")]\nfn log10(a: f64) -> Result<f64, EvalError> {\n    if a.is_sign_negative() {\n        return Err(EvalError::NegativeOutOfDomain(\"log10\".into()));\n    }\n    if a == 0.0 {\n        return Err(EvalError::ZeroOutOfDomain(\"log10\".into()));\n    }\n    Ok(a.log10())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Log10;
impl crate::func::EagerUnaryFunc for Log10 {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        log10(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Log10 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("log10f64")
    }
}
fn log10(a: f64) -> Result<f64, EvalError> {
    if a.is_sign_negative() {
        return Err(EvalError::NegativeOutOfDomain("log10".into()));
    }
    if a == 0.0 {
        return Err(EvalError::ZeroOutOfDomain("log10".into()));
    }
    Ok(a.log10())
}
