src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__round_float64.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"roundf64\")]\nfn round_float64(a: f64) -> f64 {\n    a.round_ties_even()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct RoundFloat64;
impl crate::func::EagerUnaryFunc for RoundFloat64 {
    type Input<'a> = f64;
    type Output<'a> = f64;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        round_float64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for RoundFloat64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("roundf64")
    }
}
fn round_float64(a: f64) -> f64 {
    a.round_ties_even()
}
