src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__sleep.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"mz_sleep\")]\nfn sleep(a: f64) -> Option<CheckedTimestamp<DateTime<Utc>>> {\n    let duration = std::time::Duration::from_secs_f64(a);\n    std::thread::sleep(duration);\n    None\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Sleep;
impl crate::func::EagerUnaryFunc for Sleep {
    type Input<'a> = f64;
    type Output<'a> = Option<CheckedTimestamp<DateTime<Utc>>>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        sleep(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Sleep {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_sleep")
    }
}
fn sleep(a: f64) -> Option<CheckedTimestamp<DateTime<Utc>>> {
    let duration = std::time::Duration::from_secs_f64(a);
    std::thread::sleep(duration);
    None
}
