src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__tan.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc()]\nfn tan(a: f64) -> Result<f64, EvalError> {\n    if a.is_infinite() {\n        return Err(EvalError::InfinityOutOfDomain(\"tan\".into()));\n    }\n    Ok(a.tan())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Tan;
impl crate::func::EagerUnaryFunc for Tan {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        tan(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Tan {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(tan))
    }
}
fn tan(a: f64) -> Result<f64, EvalError> {
    if a.is_infinite() {
        return Err(EvalError::InfinityOutOfDomain("tan".into()));
    }
    Ok(a.tan())
}
